tenants/tenant-255/sjeb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sjeb
    tenant: tenant-255
  name: sjeb
  namespace: tenant-255
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sjeb
      tenant: tenant-255
  template:
    metadata:
      labels:
        app: sjeb
        tenant: tenant-255
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: sjeb
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
