tenants/tenant-255/sjeb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sjeb-ingress
  namespace: tenant-255
spec:
  ingressClassName: nginx
  rules:
  - host: sjeb.tenant-255.local.dev
    http:
      paths:
      - backend:
          service:
            name: sjeb-service
            port:
              number: 80
        path: /
        pathType: Prefix
